project(test)
set(CMAKE_C_FLAGS "-g")
set(CMAKE_CXX_FLAGS "-g")
set(CMAKE_CXX_STANDARD 14)
include_directories(${CMAKE_CURRENT_LIST_DIR})
file(GLOB SERVERSRCS ${CMAKE_CURRENT_LIST_DIR}/server.cpp)
add_executable(server ${SERVERSRCS})
target_link_libraries(server zmq pthread)
file(GLOB CLIENTSRCS ${CMAKE_CURRENT_LIST_DIR}/client.cpp)
add_executable(client ${CLIENTSRCS})
target_link_libraries(client zmq pthread)
