[package]
name = "test_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0"
image = "0"
crossbeam = "0"
text-colorizer = "1"
regex = "1"
serde_json = "1"
actix-web = "1"
rand = "0"
chrono = "0"
byteorder = "1"
flate2 = "1"
serde = "1"
reqwest = { version = "0", features = ["blocking", "rustls-tls"], default-features = false }
rayon = "1"
lazy_static = "1"
