set(CMAKE_CXX_STANDARD 17)
add_executable(test_shmallocator test_shmallocator.cpp shmallocator.cpp)
target_include_directories(test_shmallocator PRIVATE boost_install/include spdlog/include)
target_link_directories(test_shmallocator PRIVATE spdlog/lib)
target_compile_options(test_shmallocator PRIVATE -g -Wall)
target_link_libraries(test_shmallocator PRIVATE spdlog pthread)
