find_package(glog REQUIRED)
add_executable(test_app test_app.cpp)
target_compile_options(test_app PRIVATE -g)
# target_link_directories(test_app PRIVATE test_lib_a/build test_lib_so/build extra_lib/build)
# target_link_libraries(test_app PRIVATE test_lib_a test_lib_so extra_lib glog::glog)
target_link_directories(test_app PRIVATE test_lib_so/build)
target_link_libraries(test_app PRIVATE test_lib_so glog::glog)
