cmake_minimum_required(VERSION ${CMAKE_VERSION})
find_package(glog REQUIRED)
add_executable(test_app test_app.cpp)
target_compile_options(test_app PRIVATE -g)
set(TEST_LIB_TYPE "static")
if ("${TEST_LIB_TYPE}" STREQUAL "static")
add_definitions(-DTEST_LIB_STATIC)
target_link_directories(test_app PRIVATE test_lib_a/build extra_lib/build)
target_link_libraries(test_app PRIVATE test_lib_a extra_lib glog::glog)
elseif("${TEST_LIB_TYPE}" STREQUAL "dynamic")
add_definitions(-DTEST_LIB_DYNAMIC)
target_link_directories(test_app PRIVATE test_lib_so/build)
target_link_libraries(test_app PRIVATE test_lib_so glog::glog)
endif()
