cmake_minimum_required(VERSION ${CMAKE_VERSION})
set(CMAKE_CXX_STANDARD 17)
add_executable(test_stacktrace test_stacktrace.cpp)
set(DWARF system)
if(DWARF STREQUAL "system")
    add_definitions(-DBACKWARD_HAS_DWARF=1)
endif()
target_include_directories(test_stacktrace PRIVATE .)
if(DWARF STREQUAL "system")
    target_include_directories(test_stacktrace PRIVATE "/usr/include/libdwarf")
else()
    target_include_directories(test_stacktrace PRIVATE "libbacktrace_install/include" "cpptrace_install/include")
endif()
target_link_directories(test_stacktrace PRIVATE libbacktrace_install/lib)
if(DWARF STREQUAL "system")
else()
    target_link_directories(test_stacktrace PRIVATE "cpptrace_install/lib")
endif()
# target_compile_options(test_stacktrace PRIVATE -g -O0 -fno-inline-functions -fno-omit-frame-pointer -rdynamic)
target_compile_options(test_stacktrace PRIVATE -g -O3 -fno-omit-frame-pointer -rdynamic)
target_link_libraries(test_stacktrace PRIVATE pthread)
if(DWARF STREQUAL "system")
    target_link_libraries(test_stacktrace PRIVATE dwarf elf)
else()
    target_link_libraries(test_stacktrace PRIVATE dw unwind backtrace cpptrace dwarf z zstd bfd)
endif()
