set(CYBERRT_INSTALL /share/shenda/dev/cyberrt/CyberRT-10.0.0/install)
include_directories(. ${CYBERRT_INSTALL}/include)
add_compile_options(-std=c++17 -O3)
link_directories(${CYBERRT_INSTALL}/lib)
link_libraries(protobuf)
set(SRC image.pb.cc)
add_executable(sender sender.cpp ${SRC})
add_executable(receiver receiver.cpp ${SRC})
add_executable(test_perf test_perf.cpp ${SRC})
